--- a/output.css
+++ b/output.css
@@ -965,6 +965,7 @@ video {
 }
 
 body{
+  overflow-x: hidden;
   font-family: "Poppins", sans-serif;
 }
 
